fix: added a cforum binary just dispatching a request, yet

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,6 +17,13 @@ add_subdirectory(framework)
 
 add_subdirectory(tests)
 
-
+add_executable(cforum cforum.cc)
+target_link_libraries(cforum
+  cfjson
+  cfcgi
+  cfcouchdb
+  cftemplate
+  cfframework
+)
 
 # eof
