added a controllers subdirectory and also a threadlist controller skeleton

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,6 +14,7 @@ add_subdirectory(couchdb)
 add_subdirectory(cgi)
 add_subdirectory(template)
 add_subdirectory(framework)
+add_subdirectory(controllers)
 
 add_subdirectory(tests)
 
