added the threadlist controller to the load list

--- a/etc/cforum.js.example
+++ b/etc/cforum.js.example
@@ -1,6 +1,6 @@
 config = {
   'system': {
-    'modules': [],
+    'modules': ['libcf_threadlist_controller.so'],
     'modpath': '/usr/lib/cforum/'
   },
 
