--- a/src/controllers/threadlist_controller/CMakeLists.txt
+++ b/src/controllers/threadlist_controller/CMakeLists.txt
@@ -5,6 +5,6 @@
 include_directories (BEFORE "${CMAKE_CURRENT_SOURCE_DIR}/.." "${CMAKE_CURRENT_SOURCE_DIR}")
 
 add_library(cf_threadlist_controller MODULE threadlist_controller.cc)
-target_link_libraries(cf_threadlist_controller cfexceptions cfcgi cfjsevaluator cfjson cfcouchdb ${Boost_LIBRARIES} ${ICU_LIBRARY} ${PCREPP_LIBRARIES})
+target_link_libraries(cf_threadlist_controller cfexceptions cfcgi cfjsevaluator cfjson cftemplate ${Boost_LIBRARIES} ${ICU_LIBRARY} ${PCREPP_LIBRARIES})
 
 # eof
