--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -6,16 +6,14 @@ include_directories (BEFORE "${CMAKE_CURRENT_SOURCE_DIR}/.." "${CMAKE_CURRENT_SO
 
 add_subdirectory(cgi)
 add_subdirectory(json)
-add_subdirectory(couchdb)
 add_subdirectory(template)
 add_subdirectory(framework)
 
 add_executable(run_tests run_tests.cc)
 target_link_libraries(run_tests
-#  cfjson_test
-#  cfcgi_test
-#  cfcouchdb_test
-#  cftemplate_test
+  cfjson_test
+  cfcgi_test
+  cftemplate_test
   cfframework_test
 )
 
