added a model for threads

--- a/src/models/CMakeLists.txt
+++ b/src/models/CMakeLists.txt
@@ -6,6 +6,7 @@ include_directories(BEFORE "${CMAKE_CURRENT_SOURCE_DIR}/.." "${CMAKE_CURRENT_SOU
 
 add_library(cfmodels SHARED
   message.cc
+  thread.cc
 )
 
 target_link_libraries(cfmodels cfframework ${Boost_LIBRARIES} ${ICU_LIBRARY} ${PCREPP_LIBRARIES})
