--- a/src/cgi/CMakeLists.txt
+++ b/src/cgi/CMakeLists.txt
@@ -10,4 +10,21 @@ add_library(cfcgi SHARED cgi.cc cgi_exception.cc parameter_exception.cc cgi_pars
 
 target_link_libraries(cfcgi cfexceptions ${ICU_LIBRARY})
 
+install(
+  TARGETS
+    cfcgi
+  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+)
+
+install(
+  FILES
+    cgi_exception.hh
+    cgi.hh
+    cgi_parser_exception.hh
+    parameter_exception.hh
+  DESTINATION
+    "${CMAKE_INSTALL_PREFIX}/include/cforum/cgi"
+)
+
 # eof
