--- a/src/exceptions/CMakeLists.txt
+++ b/src/exceptions/CMakeLists.txt
@@ -9,4 +9,18 @@ add_library(cfexceptions SHARED
   cforum_exception.cc
 )
 
+install(
+  TARGETS
+    cfexceptions
+  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+)
+
+install(
+  FILES
+    cforum_exception.hh
+  DESTINATION
+    "${CMAKE_INSTALL_PREFIX}/include/cforum/exceptions"
+)
+
 # eof
