--- a/src/jsevaluator/CMakeLists.txt
+++ b/src/jsevaluator/CMakeLists.txt
@@ -10,4 +10,19 @@ add_library(cfjsevaluator SHARED js_evaluator.cc js_evaluator_exception.cc)
 
 target_link_libraries(cfjsevaluator cfexceptions ${ICU_LIBRARY} ${V8_LIBRARY})
 
+install(
+  TARGETS
+    cfjsevaluator
+  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+)
+
+install(
+  FILES
+    js_evaluator.hh
+    js_evaluator_exception.hh
+  DESTINATION
+    "${CMAKE_INSTALL_PREFIX}/include/cforum/jsevaluator"
+)
+
 # eof
