--- a/src/controllers/threadlist_controller/CMakeLists.txt
+++ b/src/controllers/threadlist_controller/CMakeLists.txt
@@ -7,4 +7,11 @@ include_directories (BEFORE "${CMAKE_CURRENT_SOURCE_DIR}/.." "${CMAKE_CURRENT_SO
 add_library(cf_threadlist_controller MODULE threadlist_controller.cc)
 target_link_libraries(cf_threadlist_controller cfexceptions cfcgi cfjsevaluator cfjson cftemplate cfmodels ${Boost_LIBRARIES} ${ICU_LIBRARY} ${PCREPP_LIBRARIES})
 
+install(
+  TARGETS
+    cf_threadlist_controller
+  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}/cforum
+)
+
 # eof
