added views.js to install list, added 'views-js' key to config file example

--- a/etc/CMakeLists.txt
+++ b/etc/CMakeLists.txt
@@ -10,6 +10,7 @@ add_subdirectory(views)
 install(
   FILES
     cforum.js.example
+    views.js
   DESTINATION
     "${CMAKE_INSTALL_SYSCONFDIR}/cforum"
 )
