overhauled exception system; now there are error exceptions and „normal“ exceptions

--- a/etc/cforum.js.example
+++ b/etc/cforum.js.example
@@ -1,5 +1,8 @@
 config = {
   'system': {
+    'urls': {
+      'base': 'http://localhost/cforum/htdocs'
+    },
     'modules': ['libcf_threadlist_controller.so'],
     'modpath': '/usr/lib/cforum/',
     'views-js': '/etc/cforum/views.js'
